lots of changes, my eyes hurt. all custom sizes

--- a/index.html
+++ b/index.html
@@ -93,25 +93,24 @@
 
             <div id="details_section" class="row">
               <div class="col-xs-6">
-                <span id="jessNereus" class="happyCouple"> Jessica & Nereus</span>
-                <h1 class="savethedatetext" id="gettingMarried">are getting married!</h1>
-                <h2  class="savethedatetext" id="weddingDate"> 30th June, 2018</h2>
-                <h2  class="savethedatetext" id="weddingTime">Arlee, Montana</h2>
+                <span id="jessNereus"> Jessica & Nereus</span>
+                <h1 id="gettingMarried">are getting married!</h1>
+                <h2 id="weddingDate"> 30th June, 2018</h2>
+                <h2 id="weddingLocation">Arlee, Montana.</h2>
               </div>
 
               <div class="col-xs-4">
                   <img id="family" src="images/family.JPG" alt="family">
-
               </div>
+            </div>
               <div class="col-xs-2">
               </div>
             </div>
-            <p id="details">The wedding ceremony and reception will be at the McCay Residence in Arlee, MT. <br>
-              There will be a shuttle service to pick wedding guests up and bring them to the McCay residence and back again after the reception.
-              We hope you will take advantage of this service as there will be an open bar to enjoy! Please email jessmccay@gmail.com for more details.
-              We love to dance so don't forget to bring along some comfortable shoes if you plan to 'get down'! </p>
+            <p id="details"><span id="the">The  wedding</span> ceremony and reception will be at the McCay residence in Arlee, MT.
+              We are offering complementary shuttle service both before the wedding ceremony and during the reception one at 9:30 and another 11:00 which will be bringing you back to the same location it picked you up at.
+              Please email <span font-weight="bold";> jessmccay@gmail.com</span> if you would like more details and to make arrangements.
+              We love to dance so remember to bring along some comfortable shoes! This is an outdoor ceremony and reception.
             <br>
-          </div>
         </div>
       </div> <!--close flex container-->
 
@@ -130,10 +129,9 @@
     <div class="col-xs-4">
       <img class="daisy4" src="images/daisy.png" alt="">
       <img class="daisy4" src="images/daisy.png" alt="">
+      <h1 id="rsvp"><a href="http://McCayBrownWedding.rsvpify.com">RSVP</a></h1>
       <img class="daisy10" src="images/daisy.png" alt="">
       <img class="daisy11" src="images/daisy.png" alt="">
-
-      <h1 id="rsvp"><a href="http://McCayBrownWedding.rsvpify.com">RSVP</a></h1>
     </div>
 
   <div class="col-xs-4">
@@ -142,66 +140,67 @@
     <img class="daisy8" src="images/daisy.png" alt="">
     <img class="daisy9" src="images/daisy.png" alt="">
   </div>
+
 </div>
 <hr>
 <br>
 <br>
 <br>
 
-    <div class="container">
+<div class="container">
 
-      <div class="row">
-        <div class="col-lg-12">
-          <div class="mt">
-            <h1 id="goingToMontanaHeader">So you're going to <span class="montana">Montana?</span></h1>
-            <h1 id="lotsToSee">There are a lot of great things to do and see!</h1>
-          </div>
+  <div class="row">
+
+    <div class="col-lg-12">
+      <div class="mt">
+        <h1 id="goingToMontanaHeader">So you're going to <span class="montana">Montana?</span></h1>
+        <h1 id="lotsToSee">There are a lot of great things to do and see!</h1>
+      </div>
+    </div>
+
+      <div class="col-lg-4 col-sm-6 text-center mb-4">
+        <img class="rounded-circle img-fluid d-block mx-auto" src="images/yellowstone.jpg" alt="Yellowstone National Park" height="200px" width="350px">
+        <h3>Yellowstone National Park </h3>
+        <p class="attractionDescription">If you are making the trek to Montana, why not travel to the famous Yellowstone National Park?
+         Learn more about Yellowstone National Park <a href="https://www.nps.gov/yell/index.htm">here.</a></p>
+      </div>
+
+      <div class="col-lg-4 col-sm-6 text-center mb-4">
+        <img class="rounded-circle img-fluid d-block mx-auto" src="images/flathead.jpg" alt="Flathead Lake" >
+        <h3>Flathead Lake</h3>
+        <p class="attractionDescription">Love the water? Well then you must take a dip in the largest natural freshwater lake west of the Mississippi!
+          Learn more about Flathead Lake <a href="http://www.visitmt.com/listings/general/lake/flathead-lake.html">here.</a></p>
+      </div>
+
+      <div class="col-lg-4 col-sm-6 text-center mb-4">
+        <img class="rounded-circle img-fluid d-block mx-auto" src="http://chrislatray.files.wordpress.com/2010/04/m2.jpg" alt="The 'M'">
+        <h3>The 'M' </h3>
+        <p class="attractionDescription">Hike the Missoula 'M'. See the beautiful view of Missoula from above while getting to breath that fresh Montana air.</p>
+      </div>
+
+      <div class="col-lg-4 col-sm-6 text-center mb-4">
+        <img class="rounded-circle img-fluid d-block mx-auto" src="images/glacier-national-park.jpg" alt="Glacier National Park" height="200px" width="350px">
+        <h3>Glacier National Park </h3>
+        <p class="attractionDescription">Take a day trip or go camping surrounding by breathtaking beauty. You havent quite lived until riding down The Sun Road!
+          Learn more about Glacier National Park <a href="https://www.nps.gov/glac/index.htm">here.</a></p>
         </div>
 
+      <div class="col-lg-4 col-sm-6 text-center mb-4">
+        <img class="rounded-circle img-fluid d-block mx-auto" src="images/gardenofbuddhas.jpg" alt="Garden of 1000 Buddha's">
+        <h3>Garden of 1000 Buddha's </h3>
+        <p class="attractionDescription">Just down the road in Arlee you will find the Garden of 1000 Buddha's. This impressive site is free to visit.Learn more about Garden of 1000 Buddha's <a href="http://www.ewambuddhagarden.org/">here.</a>
+        </p>
+      </div>
 
-        <div class="col-lg-4 col-sm-6 text-center mb-4">
-          <img class="rounded-circle img-fluid d-block mx-auto" src="images/yellowstone.jpg" alt="Yellowstone National Park" height="200px" width="350px">
-          <h3>Yellowstone National Park </h3>
-          <p class="attractionDescription">If you are making the trek to Montana, why not travel to the famous Yellowstone National Park?
-           Learn more about Yellowstone National Park <a href="https://www.nps.gov/yell/index.htm">here.</a></p>
-        </div>
+      <div class="col-lg-4 col-sm-6 text-center mb-4">
+        <img class="rounded-circle img-fluid d-block mx-auto" src="http://vacationidea.com/pix/img25Hy8R/ideas/t-t6_missoula_farmer's_market_6281_mobi.jpg" alt="farmer's market">
+        <h2>Missoula Farmers Market</h2>
+        <p class="attractionDescription">On Saturday mornings, downtown missoula hosts the missoula farmer's market where you can find delicious breakfast food, fresh produce and some very neat hand made goods.</p>
+      </div>
 
-        <div class="col-lg-4 col-sm-6 text-center mb-4">
-          <img class="rounded-circle img-fluid d-block mx-auto" src="images/flathead.jpg" alt="Flathead Lake" >
-          <h3>Flathead Lake</h3>
-          <p class="attractionDescription">Love the water? Well then you must take a dip in the largest natural freshwater lake west of the Mississippi!
-            Learn more about Flathead Lake <a href="http://www.visitmt.com/listings/general/lake/flathead-lake.html">here.</a></p>
-        </div>
+    </div> <!--close row-->
 
-        <div class="col-lg-4 col-sm-6 text-center mb-4">
-          <img class="rounded-circle img-fluid d-block mx-auto" src="http://chrislatray.files.wordpress.com/2010/04/m2.jpg" alt="The 'M'">
-          <h3>The 'M' </h3>
-          <p class="attractionDescription">Hike the Missoula 'M'. See the beautiful view of Missoula from above while getting to breath that fresh Montana air.</p>
-        </div>
-
-        <div class="col-lg-4 col-sm-6 text-center mb-4">
-          <img class="rounded-circle img-fluid d-block mx-auto" src="images/glacier-national-park.jpg" alt="Glacier National Park" height="200px" width="350px">
-          <h3>Glacier National Park </h3>
-          <p class="attractionDescription">Take a day trip or go camping surrounding by breathtaking beauty. You havent quite lived until riding down The Sun Road!
-            Learn more about Glacier National Park <a href="https://www.nps.gov/glac/index.htm">here.</a></p>
-          </div>
-
-        <div class="col-lg-4 col-sm-6 text-center mb-4">
-          <img class="rounded-circle img-fluid d-block mx-auto" src="images/gardenofbuddhas.jpg" alt="Garden of 1000 Buddha's">
-          <h3>Garden of 1000 Buddha's </h3>
-          <p class="attractionDescription">Just down the road in Arlee you will find the Garden of 1000 Buddha's. This impressive site is free to visit.Learn more about Garden of 1000 Buddha's <a href="http://www.ewambuddhagarden.org/">here.</a>
-          </p>
-        </div>
-
-        <div class="col-lg-4 col-sm-6 text-center mb-4">
-          <img class="rounded-circle img-fluid d-block mx-auto" src="http://vacationidea.com/pix/img25Hy8R/ideas/t-t6_missoula_farmer's_market_6281_mobi.jpg" alt="farmer's market">
-          <h2>Missoula Farmers Market</h2>
-          <p class="attractionDescription">On Saturday mornings, downtown missoula hosts the missoula farmer's market where you can find delicious breakfast food, fresh produce and some very neat hand made goods.</p>
-        </div>
-
-      </div> <!--close row-->
-
-    </div>           <!--end fun places to go -->
+  </div>           <!--end fun places to go -->
 </div>
   </body>
 </html>
