--- a/RSVP.html
+++ b/RSVP.html
@@ -21,13 +21,8 @@
 
   <!-- Latest compiled and minified JavaScript -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+<link href='http://fonts.googleapis.com/css?family=Great+Vibes' rel='stylesheet' type='text/css'>
 
-  <!-- GOOOGLE MAPS -->
-  <script src="//maps.google.com/maps/api/js?key=AIzaSyDjzADB3Uj6feRK51w8IlKMIL5KF_BqbKE"></script>
-  <script src="//cdn.rawgit.com/mahnunchik/markerclustererplus/master/dist/markerclusterer.min.js"></script>
-  <script src="//cdn.rawgit.com/printercu/google-maps-utility-library-v3-read-only/master/infobox/src/infobox_packed.js" type="text/javascript"></script>
-
-<!-- END GOOGLE MAPS -->
 <link rel="stylesheet" href="RSVP.css">
 <link href='https://fonts.googleapis.com/css?family=Great+Vibes' rel='stylesheet' type='text/css'>
 </head>
@@ -56,7 +51,7 @@
         </nav>
       </div>
       <!--end nav container-->
-
+<div><h1><a href="http://McCayBrownWedding.rsvpify.com">RSVP</a></h1></div>
   <div class="top">
   </div>
   <div class="form">
