--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <div class="jumbotron">
         <div id="mySidenav" class="sidenav">
           <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-          <a href="http://McCayBrownWedding.rsvpify.com">RSVP</a>
+          <!-- <a href="http://McCayBrownWedding.rsvpify.com">RSVP</a> -->
           <a href="#goingToMontanaHeader">Sites to see</a>
           <a href="#">Registry</a>
           <a href="#">Contact</a>
@@ -117,7 +117,7 @@
 <br>
 <br>
 <br>
-<hr>
+<!-- <hr>
 <div class="row">
   <div class="col-xs-4">
     <img class="daisy1" src="images/daisy.png" alt="">
@@ -142,7 +142,7 @@
   </div>
 
 </div>
-<hr>
+<hr> -->
 <br>
 <br>
 <br>
