--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
       <div class="jumbotron">
         <div id="mySidenav" class="sidenav">
           <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-          <!-- <a href="http://McCayBrownWedding.rsvpify.com">RSVP</a> -->
+          <a href="http://McCayBrownWedding.rsvpify.com">RSVP</a>
           <a href="#goingToMontanaHeader">Sites to see</a>
-          <a href="#">Registry</a>
+          <a href="#registry">Registry</a>
           <a href="#">Contact</a>
         </div>
         <span id="menu" style="cursor:pointer" onclick="openNav()">&#9776; menu</span>
@@ -106,7 +106,7 @@
               <div class="col-xs-2">
               </div>
             </div>
-            <p id="details"><span id="the">The  wedding</span> ceremony and reception will be at the McCay residence in Arlee, MT.
+            <p id="details"><span id="the">We found love</span> and we want to celebrate it with you! The  wedding ceremony and reception will be at the McCay residence in Arlee, MT.
               We are offering complementary shuttle service both before the wedding ceremony and during the reception one at 9:30 and another 11:00 which will be bringing you back to the same location it picked you up at.
               Please email <span font-weight="bold";> jessmccay@gmail.com</span> if you would like more details and to make arrangements.
               We love to dance so remember to bring along some comfortable shoes! This is an outdoor ceremony and reception.
@@ -117,32 +117,33 @@
 <br>
 <br>
 <br>
-<!-- <hr>
-<div class="row">
-  <div class="col-xs-4">
-    <img class="daisy1" src="images/daisy.png" alt="">
+<hr>
+<!-- <div class="row"> -->
+  <!-- <div class="col-xs-2"> -->
+    <!-- <img class="daisy1" src="images/daisy.png" alt="">
     <img class="daisy2" src="images/daisy.png" alt="">
-    <img class="daisy3" src="images/daisy.png" alt="">
+    <img class="daisy3" src="images/daisy.png" alt=""> -->
 
-  </div>
+  <!-- </div> -->
 
-    <div class="col-xs-4">
-      <img class="daisy4" src="images/daisy.png" alt="">
-      <img class="daisy4" src="images/daisy.png" alt="">
+    <!-- <div class="col-xs-2"> -->
+      <!-- <img class="daisy4" src="images/daisy.png" alt="">
+      <img class="daisy4" src="images/daisy.png" alt=""> -->
+      <a  href="https://www.zola.com/wedding/jessicaandnereus/registry" target="_blank"> <img id="registry" src="images/zola-logos/png/zola-logo-pride.png" alt="https://www.zola.com/wedding/jessicaandnereus/registry"></a>
       <h1 id="rsvp"><a href="http://McCayBrownWedding.rsvpify.com">RSVP</a></h1>
-      <img class="daisy10" src="images/daisy.png" alt="">
-      <img class="daisy11" src="images/daisy.png" alt="">
-    </div>
+      <!-- <img class="daisy11" src="images/daisy.png" alt="">
+      <img class="daisy10" src="images/daisy.png" alt=""> -->
+    <!-- </div> -->
 
-  <div class="col-xs-4">
-    <img class="daisy6" src="images/daisy.png" alt="">
+  <!-- <div class="col-xs-8"> -->
+    <!-- <img class="daisy6" src="images/daisy.png" alt="">
     <img class="daisy7" src="images/daisy.png" alt="">
     <img class="daisy8" src="images/daisy.png" alt="">
-    <img class="daisy9" src="images/daisy.png" alt="">
-  </div>
+    <img class="daisy9" src="images/daisy.png" alt=""> -->
+  <!-- </div> -->
 
-</div>
-<hr> -->
+<!-- </div> -->
+<hr>
 <br>
 <br>
 <br>
