--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
           </div>
         </div>
       </div> <!--close flex container-->
+      <p id="shuttle">Would you like to take a shuttle to the wedding and back to missoula after the reception? Please <a href="mailto:jessmccay@gmail.com?subject=Shuttle%20Service&body=Yes,%20I%20would%20love%20to%20take%20a%20shuttle.">CLICK HERE TO RESPOND. Please sign your name and dont forget to click send!</a> If there is enough demand we will provide a shuttle!</p>
+
       <p id="details"><span id="the">We found love</span> and we want to celebrate it with you! The  wedding ceremony and reception will be at the McCay residence in Arlee, MT.
         We are offering complementary shuttle service both before the wedding ceremony and during the reception one at 9:30 and another 11:00 which will be bringing you back to the same location it picked you up at.
         Please email <span font-weight="bold";> jessmccay@gmail.com</span> if you would like more details and to make arrangements.
