custom amazon wedding registry logo

--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
       <!-- <img class="daisy4" src="images/daisy.png" alt="">
       <img class="daisy4" src="images/daisy.png" alt=""> -->
       <div class="">
-        <a  href="https://www.zola.com/wedding/jessicaandnereus/registry" target="_blank"> <img id="registry" src="images/zola-logos/png/zola-logo-pride.png" alt="https://www.zola.com/wedding/jessicaandnereus/registry"></a>
-        <h4><a href="https://www.amazon.com/wedding/jessica-mccay-nereus-brown-arlee-june-2018/registry/PAP93ASIJOKN">Amazon Wedding Registry</a></h4>
+        <a  href="https://www.zola.com/wedding/jessicaandnereus/registry" target="_blank"> <img id="registry" src="images/zola-logos/png/zola-logo-blue.png" alt="https://www.zola.com/wedding/jessicaandnereus/registry"></a>
+        <a href="https://www.amazon.com/wedding/jessica-mccay-nereus-brown-arlee-june-2018/registry/PAP93ASIJOKN"> <img id="registry" src="images/amazonRegistry.png"></a>
       </div>
       <h1 id="rsvp"><a href="http://McCayBrownWedding.rsvpify.com">RSVP</a></h1>
       <!-- <img class="daisy11" src="images/daisy.png" alt="">
