responsive size for things to do section

--- a/index.html
+++ b/index.html
@@ -72,34 +72,16 @@
 <br>
 <br>
 <hr>
-<!-- <div class="row"> -->
-  <!-- <div class="col-xs-2"> -->
-    <!-- <img class="daisy1" src="images/daisy.png" alt="">
-    <img class="daisy2" src="images/daisy.png" alt="">
-    <img class="daisy3" src="images/daisy.png" alt=""> -->
+<div class="parent">
+  <div class="child">
+    <a  href="https://www.zola.com/wedding/jessicaandnereus/registry" target="_blank"> <img class="registry" src="images/zola-logos/png/zola-logo-blue.png" alt="https://www.zola.com/wedding/jessicaandnereus/registry"></a>
+  </div>
+  <div class="child">
+    <a href="https://www.amazon.com/wedding/jessica-mccay-nereus-brown-arlee-june-2018/registry/PAP93ASIJOKN"> <img class="registry" src="images/amazonRegistry.png"></a>
+  </div>
+</div>
+  <a href="http://McCayBrownWedding.rsvpify.com"> <img id="rsvp" src="images/RSVP.png" alt="rsvp"></a>
 
-  <!-- </div> -->
-
-    <!-- <div class="col-xs-2"> -->
-      <!-- <img class="daisy4" src="images/daisy.png" alt="">
-      <img class="daisy4" src="images/daisy.png" alt=""> -->
-      <div class="">
-        <a  href="https://www.zola.com/wedding/jessicaandnereus/registry" target="_blank"> <img id="registry" src="images/zola-logos/png/zola-logo-blue.png" alt="https://www.zola.com/wedding/jessicaandnereus/registry"></a>
-        <a href="https://www.amazon.com/wedding/jessica-mccay-nereus-brown-arlee-june-2018/registry/PAP93ASIJOKN"> <img id="registry" src="images/amazonRegistry.png"></a>
-      </div>
-      <h1 id="rsvp"><a href="http://McCayBrownWedding.rsvpify.com">RSVP</a></h1>
-      <!-- <img class="daisy11" src="images/daisy.png" alt="">
-      <img class="daisy10" src="images/daisy.png" alt=""> -->
-    <!-- </div> -->
-
-  <!-- <div class="col-xs-8"> -->
-    <!-- <img class="daisy6" src="images/daisy.png" alt="">
-    <img class="daisy7" src="images/daisy.png" alt="">
-    <img class="daisy8" src="images/daisy.png" alt="">
-    <img class="daisy9" src="images/daisy.png" alt=""> -->
-  <!-- </div> -->
-
-<!-- </div> -->
 <hr>
 <br>
 <br>
