fixed out of line attraction elements/descriptions!

--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@
       <div class="col-lg-4 col-sm-6 text-center mb-4">
         <img class="rounded-circle img-fluid d-block mx-auto" src="images/glacier-national-park.jpg" alt="Glacier National Park" height="200px" width="350px">
         <h3>Glacier National Park </h3>
-        <p class="attractionDescription">Take a day trip or go camping surrounding by breathtaking beauty. You havent quite lived until riding down The Sun Road!
-          Learn more about Glacier National Park <a href="https://www.nps.gov/glac/index.htm">here.</a></p>
+        <p class="attractionDescription">Take a day trip or go camping and be<br> surrounded by breathtaking beauty.<br> You havent quite lived until riding <br> down The Sun Road! Wildlife sightings<br> are likely.
+          Learn more about<br> Glacier National Park <a href="https://www.nps.gov/glac/index.htm">here.</a></p>
         </div>
 
       <div class="col-lg-4 col-sm-6 text-center mb-4">
