--- a/index.html
+++ b/index.html
@@ -102,14 +102,14 @@
         <img class="rounded-circle img-fluid d-block mx-auto" src="images/yellowstone.jpg" alt="Yellowstone National Park" height="200px" width="350px">
         <h3>Yellowstone National Park </h3>
         <p class="attractionDescription">If you are making the trek to Montana, why not travel to the famous Yellowstone National Park?
-         Learn more about Yellowstone National Park <a href="https://www.nps.gov/yell/index.htm">here.</a></p>
+         Learn more about Yellowstone National Park <a href="https://www.nps.gov/yell/index.htm" target="_blank" >here.</a></p>
       </div>
 
       <div class="col-lg-4 col-sm-6 text-center mb-4">
         <img class="rounded-circle img-fluid d-block mx-auto" src="images/flathead.jpg" alt="Flathead Lake" >
         <h3>Flathead Lake</h3>
         <p class="attractionDescription">Love the water? Well then you must take a dip in the largest natural freshwater lake west of the Mississippi!
-          Learn more about Flathead Lake <a href="http://www.visitmt.com/listings/general/lake/flathead-lake.html">here.</a></p>
+          Learn more about Flathead Lake <a href="http://www.visitmt.com/listings/general/lake/flathead-lake.html" target="_blank" >here.</a></p>
       </div>
 
       <div class="col-lg-4 col-sm-6 text-center mb-4">
@@ -121,14 +121,14 @@
       <div class="col-lg-4 col-sm-6 text-center mb-4">
         <img class="rounded-circle img-fluid d-block mx-auto" src="images/glacier-national-park.jpg" alt="Glacier National Park" height="200px" width="350px">
         <h3>Glacier National Park </h3>
-        <p class="attractionDescription">Take a day trip or go camping and be<br> surrounded by breathtaking beauty.<br> You havent quite lived until riding <br> down The Sun Road! Wildlife sightings<br> are likely.
-          Learn more about<br> Glacier National Park <a href="https://www.nps.gov/glac/index.htm">here.</a></p>
+        <p class="attractionDescription">Take a day trip or go camping and be surrounded by breathtaking beauty. You havent quite lived until riding down The Sun Road! Wildlife sightings are likely.
+          Learn more about Glacier National Park <a href="https://www.nps.gov/glac/index.htm"target="_blank">here.</a></p>
         </div>
 
       <div class="col-lg-4 col-sm-6 text-center mb-4">
         <img class="rounded-circle img-fluid d-block mx-auto" src="images/gardenofbuddhas.jpg" alt="Garden of 1000 Buddha's">
         <h3>Garden of 1000 Buddha's </h3>
-        <p class="attractionDescription">Just down the road in Arlee you will find the Garden of 1000 Buddha's. This impressive site is free to visit.Learn more about Garden of 1000 Buddha's <a href="http://www.ewambuddhagarden.org/">here.</a>
+        <p class="attractionDescription">Just down the road in Arlee you will find the Garden of 1000 Buddha's. This impressive site is free to visit.Learn more about Garden of 1000 Buddha's <a href="http://www.ewambuddhagarden.org/" target="_blank" >here.</a>
         </p>
       </div>
 
