fixed alignment of registries and rsvp, new rsvp image

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </div>
         <div class="collapse navbar-collapse" id="the-links">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">RSVP</a></li>
+            <li class="active"><a href="https://McCayBrownWedding.rsvpify.com" target="_blank">RSVP</a></li>
             <li><a href="#">Amazon Registry</a></li>
             <li><a href="https://www.zola.com/wedding/jessicaandnereus/registry" target="_blank">Zola Registry</a></li>
           </ul>
@@ -74,13 +74,15 @@
 <hr>
 <div class="parent">
   <div class="child">
-    <a  href="https://www.zola.com/wedding/jessicaandnereus/registry" target="_blank"> <img class="registry" src="images/zola-logos/png/zola-logo-blue.png" alt="https://www.zola.com/wedding/jessicaandnereus/registry"></a>
+    <a href="https://www.amazon.com/wedding/jessica-mccay-nereus-brown-arlee-june-2018/registry/PAP93ASIJOKN" target="_blank"> <img class="registry amazon1" src="images/amazonRegistry.png"></a>
   </div>
   <div class="child">
-    <a href="https://www.amazon.com/wedding/jessica-mccay-nereus-brown-arlee-june-2018/registry/PAP93ASIJOKN"> <img class="registry" src="images/amazonRegistry.png"></a>
+    <a  href="https://www.zola.com/wedding/jessicaandnereus/registry" target="_blank"> <img class="registry zola1" src="images/zola-logos/png/zola-logo-blue.png" alt="https://www.zola.com/wedding/jessicaandnereus/registry"></a>
+  </div>
+  <div class="child">
+    <a href="http://McCayBrownWedding.rsvpify.com" target="_blank"> <img id="rsvp" src="images/RSVP.png" alt="rsvp"></a>
   </div>
 </div>
-  <a href="http://McCayBrownWedding.rsvpify.com"> <img id="rsvp" src="images/RSVP.png" alt="rsvp"></a>
 
 <hr>
 <br>
