--- a/index.html
+++ b/index.html
@@ -95,8 +95,7 @@
 
     <div class="col-lg-12">
       <div class="mt">
-        <h1 id="goingToMontanaHeader">So you're going to <span class="montana">Montana?</span></h1>
-        <h1 id="lotsToSee">There are a lot of great things to do and see!</h1>
+        <h1 id="goingToMontanaHeader">So you're going to <span class="montana">Montana?</span><h4 id="lotsToSee">There are a lot of great things to do and see!</h4>
       </div>
     </div>
 
