--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="collapse navbar-collapse" id="the-links">
           <ul class="nav navbar-nav">
             <li class="active"><a href="https://McCayBrownWedding.rsvpify.com" target="_blank">RSVP</a></li>
-            <li><a href="#">Amazon Registry</a></li>
+            <li><a href="https://www.amazon.com/wedding/jessica-mccay-nereus-brown-arlee-june-2018/registry/PAP93ASIJOKN" target="_blank">Amazon Registry</a></li>
             <li><a href="https://www.zola.com/wedding/jessicaandnereus/registry" target="_blank">Zola Registry</a></li>
           </ul>
         </div>
@@ -52,7 +52,7 @@
           <div id="details_section" class="row">
             <div class="col-xs-6">
               <span id="jessNereus"> Jessica + Nereus</span>
-              <h2 id="weddingDate"> 30th June, 2018</h2>
+              <h2 id="weddingDate"> Thirtieth June, 2018</h2>
               <h2 id="weddingLocation">Arlee, Montana.</h2>
             </div>
               <div class="col-xs-2">
