corrected main image height, now responsive, good on phones, added borders to make links more obvious

--- a/index.html
+++ b/index.html
@@ -76,14 +76,14 @@
 <hr>
 <div class="parent2">
   <div class="child2">
-    <p id="shuttle">Arlee currently does not have Lyft/Uber services. Would you like to take a shuttle to the wedding and back to Missoula after the reception? Please <a href="mailto:jessmccay@gmail.com?subject=Shuttle%20Service&body=Yes,%20I%20would%20love%20to%20take%20a%20shuttle.">CLICK HERE TO RESPOND. Please sign your name and dont forget to click send!</a> If there is enough demand we will provide a shuttle for our guests.</p>
+    <div id="shuttle">Arlee currently does not have Lyft/Uber services. Would you like to take a shuttle to the wedding and back to Missoula after the reception? Please <a href="mailto:jessmccay@gmail.com?subject=Shuttle%20Service&body=Yes,%20I%20would%20love%20to%20take%20a%20shuttle.">CLICK HERE TO RESPOND. Please sign your name and dont forget to click send!</a> If there is enough demand we will provide a shuttle for our guests.</div>
   </div>
   <div class="child2">
-    <p id="details"><span id="the">We found love</span> and we want to celebrate it with you! The wedding ceremony and reception will be at the McCay residence in Arlee, MT.
+    <div id="details"><span id="the">We found love</span> and we want to celebrate it with you! The wedding ceremony and reception will be at the McCay residence in Arlee, MT.
       We are offering complementary shuttle service both before the wedding ceremony and during the reception one at 9:30 and another 11:00 which will be bringing you back to the same location it picked you up at.
       Please email <span font-weight="bold";> jessmccay@gmail.com</span> if you would like more details and to make arrangements.
       We love to dance so remember to bring along some comfortable shoes! This is an outdoor ceremony and reception.
-    </p>
+    </div>
   </div>
 </div>
 <br>
