nav bar color and 0 bottom margin

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           </div>
         </div>
       </div> <!--close flex container-->
-<hr>
+<!-- <hr> -->
 <div class="parent">
   <div class="child">
     <a href="https://www.amazon.com/wedding/jessica-mccay-nereus-brown-arlee-june-2018/registry/PAP93ASIJOKN" target="_blank"> <img class="registry amazon1" src="images/amazonRegistry.png"></a>
@@ -73,7 +73,7 @@
   </div>
 </div>
 
-<hr>
+<!-- <hr> -->
 <div class="parent2">
   <div class="child2">
     <div id="shuttle">Arlee currently does not have Lyft/Uber services. Would you like to take a shuttle to the wedding and back to Missoula after the reception? Please <a href="mailto:jessmccay@gmail.com?subject=Shuttle%20Service&body=Yes,%20I%20would%20love%20to%20take%20a%20shuttle.">CLICK HERE TO RESPOND. Please sign your name and dont forget to click send!</a> If there is enough demand we will provide a shuttle for our guests.</div>
@@ -95,7 +95,7 @@
 
     <div class="col-lg-12">
       <div class="mt">
-        <h1 id="goingToMontanaHeader">So you're going to <span class="montana">Montana?</span><h4 id="lotsToSee">There are a lot of great things to do and see!</h4>
+        <h1 id="goingToMontanaHeader">So, you're going to <span class="montana">Montana?</span><h4 id="lotsToSee">There are a lot of great things to do and see!</h4>
       </div>
     </div>
 
