background image responsive cell phone size

--- a/index.html
+++ b/index.html
@@ -19,10 +19,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="index.css">
     <script src="index.js"></script>
-    <link href='http://fonts.googleapis.com/css?family=Arizonia' rel='stylesheet' type='text/css'>
-
-    <link href="https://fonts.googleapis.com/css?family=Rouge+Script" rel="stylesheet">
-    <link href='http://fonts.googleapis.com/css?family=Great+Vibes' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/css?family=Sacramento" rel="stylesheet">
 
 </head>
   <body>
@@ -47,20 +44,22 @@
     </nav>
 
     <div class="flexbox-container">
-      <div class="call-out">
-        <div class="getting">
-          <div id="details_section" class="row">
-            <div class="col-xs-6">
-              <span id="jessNereus"> Jessica + Nereus</span>
-              <h2 id="weddingDate"> Thirtieth June, 2018</h2>
-              <h2 id="weddingLocation">Arlee, Montana.</h2>
-            </div>
-              <div class="col-xs-2">
-            </div>
-          </div>
-        </div>
-      </div> <!--close flex container-->
+      <!-- <div class="call-out"> -->
+        <!-- <div class="getting"> -->
+          <!-- <div id="details_section" class="row"> -->
+          <div class="jessNereus">
+
+
+              Jessica + Nereus <br>
+              Thirtieth June, 2018 <br>
+              Arlee, Montana.</span>
+  </div>
+          <!-- </div> -->
+        <!-- </div> -->
+      <!-- </div> -->
+    </div> <!--close flex container-->
 <!-- <hr> -->
+
 <div class="parent">
   <div class="child">
     <a href="https://www.amazon.com/wedding/jessica-mccay-nereus-brown-arlee-june-2018/registry/PAP93ASIJOKN" target="_blank"> <img class="registry amazon1" src="images/amazonRegistry.png"></a>
