collage background, reordered rsvp and registrys, new borders.

--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="index.css">
     <script src="index.js"></script>
-    <link href="https://fonts.googleapis.com/css?family=Sacramento" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css?family=Alex+Brush|Oranienbaum" rel="stylesheet">
 </head>
   <body>
     <nav class="navbar navbar-default">
@@ -44,19 +43,13 @@
     </nav>
 
     <div class="flexbox-container">
-      <!-- <div class="call-out"> -->
-        <!-- <div class="getting"> -->
-          <!-- <div id="details_section" class="row"> -->
-          <div class="jessNereus">
-
-
-              Jessica + Nereus <br>
-              Thirtieth June, 2018 <br>
+      <div id="details_section" class="row"> -->
+        <div class="jessNereus">
+          <span id="namesDateLocation"><span id="jessNereusWedding">Jessica + Nereus</span> <br>
+            Thirtieth June, 2018 <br>
               Arlee, Montana.</span>
-  </div>
-          <!-- </div> -->
-        <!-- </div> -->
-      <!-- </div> -->
+        </div>
+      </div>
     </div> <!--close flex container-->
 <!-- <hr> -->
 
@@ -65,18 +58,17 @@
     <a href="https://www.amazon.com/wedding/jessica-mccay-nereus-brown-arlee-june-2018/registry/PAP93ASIJOKN" target="_blank"> <img class="registry amazon1" src="images/amazonRegistry.png"></a>
   </div>
   <div class="child">
-    <a  href="https://www.zola.com/wedding/jessicaandnereus/registry" target="_blank"> <img class="registry zola1" src="images/zola-logos/png/zola-logo-blue.png" alt="https://www.zola.com/wedding/jessicaandnereus/registry"></a>
+    <a href="http://McCayBrownWedding.rsvpify.com" target="_blank"><img id="hearts" src="images/hearts.png" alt=""> <span id="rsvpText">RSVP</span>  </a>
+    <div id="shuttle">Arlee currently does not have Lyft/Uber services. Would you like to take a shuttle to the wedding and back to Missoula after the reception? Please <a href="mailto:jessmccay@gmail.com?subject=Shuttle%20Service&body=Yes,%20I%20would%20love%20to%20take%20a%20shuttle.">CLICK HERE TO RESPOND. Please sign your name and dont forget to click send!</a> If there is enough demand we will provide a shuttle for our guests.</div>
   </div>
   <div class="child">
-    <a href="http://McCayBrownWedding.rsvpify.com" target="_blank"> <img id="rsvp" src="images/RSVP.png" alt="rsvp"></a>
+    <a  href="https://www.zola.com/wedding/jessicaandnereus/registry" target="_blank"> <img class="registry zola1" src="images/zola-logos/png/zola-logo-blue.png" alt="https://www.zola.com/wedding/jessicaandnereus/registry"></a>
   </div>
 </div>
 
 <!-- <hr> -->
 <div class="parent2">
-  <div class="child2">
-    <div id="shuttle">Arlee currently does not have Lyft/Uber services. Would you like to take a shuttle to the wedding and back to Missoula after the reception? Please <a href="mailto:jessmccay@gmail.com?subject=Shuttle%20Service&body=Yes,%20I%20would%20love%20to%20take%20a%20shuttle.">CLICK HERE TO RESPOND. Please sign your name and dont forget to click send!</a> If there is enough demand we will provide a shuttle for our guests.</div>
-  </div>
+
   <div class="child2">
     <div id="details"><span id="the">We found love</span> and we want to celebrate it with you! The wedding ceremony and reception will be at the McCay residence in Arlee, MT.
       We are offering complementary shuttle service both before the wedding ceremony and during the reception one at 9:30 and another 11:00 which will be bringing you back to the same location it picked you up at.
