rsvp and registries new layout

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </nav>
 
     <div class="flexbox-container">
-      <div id="details_section" class="row"> -->
+      <div id="details_section" class="row">
         <div class="jessNereus">
           <span id="namesDateLocation"><span id="jessNereusWedding">Jessica + Nereus</span> <br>
             Thirtieth June, 2018 <br>
@@ -54,26 +54,31 @@
 <!-- <hr> -->
 
 <div class="parent">
-  <div class="child">
-    <a href="https://www.amazon.com/wedding/jessica-mccay-nereus-brown-arlee-june-2018/registry/PAP93ASIJOKN" target="_blank"> <img class="registry amazon1" src="images/amazonRegistry.png"></a>
+  <div class="child rsvpChild">
+    <a href="http://McCayBrownWedding.rsvpify.com" target="_blank"><img id="hearts" src="images/hearts.png" alt=""> <span id="rsvpText">RSVP here</span></a>
   </div>
-  <div class="child">
-    <a href="http://McCayBrownWedding.rsvpify.com" target="_blank"><img id="hearts" src="images/hearts.png" alt=""> <span id="rsvpText">RSVP</span>  </a>
-    <div id="shuttle">Arlee currently does not have Lyft/Uber services. Would you like to take a shuttle to the wedding and back to Missoula after the reception? Please <a href="mailto:jessmccay@gmail.com?subject=Shuttle%20Service&body=Yes,%20I%20would%20love%20to%20take%20a%20shuttle.">CLICK HERE TO RESPOND. Please sign your name and dont forget to click send!</a> If there is enough demand we will provide a shuttle for our guests.</div>
-  </div>
-  <div class="child">
-    <a  href="https://www.zola.com/wedding/jessicaandnereus/registry" target="_blank"> <img class="registry zola1" src="images/zola-logos/png/zola-logo-blue.png" alt="https://www.zola.com/wedding/jessicaandnereus/registry"></a>
+  <div class="child children">
+    <div id="shuttle"> Would you like to take a shuttle to the wedding and back to Missoula after the reception? Please <a href="mailto:jessmccay@gmail.com?subject=Shuttle%20Service&body=Yes,%20I%20would%20love%20to%20take%20a%20shuttle.">CLICK HERE TO RESPOND. Please sign your name and dont forget to click send!</a> If there is enough demand we will provide a shuttle for our guests.</div>
   </div>
 </div>
+
+<div class="parent">
+  <div class="child rsvpChild">
+    <a  href="https://www.zola.com/wedding/jessicaandnereus/registry" target="_blank"> <img class="registry zola1" src="images/zola-logos/png/zola-logo-white.png" alt="https://www.zola.com/wedding/jessicaandnereus/registry"></a>
+  </div>
+  <div class="child children">
+    <a href="https://www.amazon.com/wedding/jessica-mccay-nereus-brown-arlee-june-2018/registry/PAP93ASIJOKN" target="_blank"> <img class="registry amazon1"><h1>Amazon</h1><h6>WEDDING REGISTRY</h6></a>
+    <!-- src="images/amazonRegistry.png" -->
+  </div>
+</div>
+
 
 <!-- <hr> -->
 <div class="parent2">
 
   <div class="child2">
     <div id="details"><span id="the">We found love</span> and we want to celebrate it with you! The wedding ceremony and reception will be at the McCay residence in Arlee, MT.
-      We are offering complementary shuttle service both before the wedding ceremony and during the reception one at 9:30 and another 11:00 which will be bringing you back to the same location it picked you up at.
-      Please email <span font-weight="bold";> jessmccay@gmail.com</span> if you would like more details and to make arrangements.
-      We love to dance so remember to bring along some comfortable shoes! This is an outdoor ceremony and reception.
+        We love to dance so remember to bring along some comfortable shoes! This is an outdoor ceremony and reception.
     </div>
   </div>
 </div>
@@ -86,7 +91,7 @@
 
     <div class="col-lg-12">
       <div class="mt">
-        <h1 id="goingToMontanaHeader">So, you're going to <span class="montana">Montana?</span><h4 id="lotsToSee">There are a lot of great things to do and see!</h4>
+        <h1 id="goingToMontanaHeader">So, you're going to <span class="montana">Montana?</span></h1><h4 id="lotsToSee">There are a lot of great things to do and see!</h4>
       </div>
     </div>
 
