--- a/index.html
+++ b/index.html
@@ -51,7 +51,6 @@
         </div>
       </div>
     </div> <!--close flex container-->
-<!-- <hr> -->
 
 <div class="parent">
   <div class="child rsvpChild">
@@ -68,7 +67,7 @@
   </div>
   <div class="child children">
     <a href="https://www.amazon.com/wedding/jessica-mccay-nereus-brown-arlee-june-2018/registry/PAP93ASIJOKN" target="_blank"> <img class="registry amazon1"><h1>Amazon</h1><h6>WEDDING REGISTRY</h6></a>
-    <!-- src="images/amazonRegistry.png" -->
+
   </div>
 </div>
 
@@ -95,11 +94,11 @@
       </div>
     </div>
 
-      <div class="col-lg-4 col-sm-6 text-center mb-4">
-        <img class="rounded-circle img-fluid d-block mx-auto" src="images/yellowstone.jpg" alt="Yellowstone National Park" height="200px" width="350px">
-        <h3>Yellowstone National Park </h3>
-        <p class="attractionDescription">If you are making the trek to Montana, why not travel to the famous Yellowstone National Park?
-         Learn more about Yellowstone National Park <a href="https://www.nps.gov/yell/index.htm" target="_blank" >here.</a></p>
+    <div class="col-lg-4 col-sm-6 text-center mb-4">
+      <img class="rounded-circle img-fluid d-block mx-auto" src="https://www.fws.gov/uploadedImages/Region_6/NWRS/Mountain_Zone/National_Bison_Range_Complex/National_Bison_Range/Images/Bison%20herd%20with%20Mssns.RU06.PatJ.512x275.jpg?n=4920" alt="Yellowstone National Park" height="200px" width="350px">
+      <h3>National Bison Range</h3>
+      <p class="attractionDescription">You must visit the National Bison Range! It is just down the road and such an incredible experience.
+        Learn more about the Bison Range <a href="https://www.fws.gov/refuge/national_bison_range/" target="_blank" >here.</a></p>
       </div>
 
       <div class="col-lg-4 col-sm-6 text-center mb-4">
@@ -135,6 +134,12 @@
         <p class="attractionDescription">On Saturday mornings, downtown missoula hosts the missoula farmer's market where you can find delicious breakfast food, fresh produce and some very neat hand made goods.</p>
       </div>
 
+      <div class="col-lg-4 col-sm-6 text-center mb-4">
+        <img class="rounded-circle img-fluid d-block mx-auto" src="images/yellowstone.jpg" alt="Yellowstone National Park" height="200px" width="350px">
+        <h3>Yellowstone National Park </h3>
+        <p class="attractionDescription">If you are making the trek to Montana, why not travel to the famous Yellowstone National Park?
+         Learn more about Yellowstone National Park <a href="https://www.nps.gov/yell/index.htm" target="_blank" >here.</a></p>
+      </div>
     </div> <!--close row-->
 
   </div>           <!--end fun places to go -->
