itinerary, blue color scheme, remove borders

--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
         </div>
       </div>
     </div> <!--close flex container-->
-
+<!-- <img id="hearts" src="images/hearts.png" alt=""> -->
 <div class="parent">
   <div class="child rsvpChild">
-    <a href="http://McCayBrownWedding.rsvpify.com" target="_blank"><img id="hearts" src="images/hearts.png" alt=""> <span id="rsvpText">RSVP here</span></a>
+    <a href="http://McCayBrownWedding.rsvpify.com" target="_blank"> <span id="rsvpText">RSVP here</span></a>
   </div>
   <div class="child children">
     <div id="shuttle"> Would you like to take a shuttle to the wedding and back to Missoula after the reception? Please <a href="mailto:jessmccay@gmail.com?subject=Shuttle%20Service&body=Yes,%20I%20would%20love%20to%20take%20a%20shuttle.">CLICK HERE TO RESPOND. Please sign your name and dont forget to click send!</a> If there is enough demand we will provide a shuttle for our guests.</div>
@@ -63,12 +63,13 @@
 
 <div class="parent">
   <div class="child rsvpChild">
-    <a  href="https://www.zola.com/wedding/jessicaandnereus/registry" target="_blank"> <img class="registry zola1" src="images/zola-logos/png/zola-logo-white.png" alt="https://www.zola.com/wedding/jessicaandnereus/registry"></a>
+    <a  href="https://www.zola.com/search/wedding-registry" target="_blank"> <a href="https://www.zola.com/registry/jessicaandnereus"><h1>ZOLA</h1><h6>WEDDING REGISTRY</h6></a>
   </div>
   <div class="child children">
-    <a href="https://www.amazon.com/wedding/jessica-mccay-nereus-brown-arlee-june-2018/registry/PAP93ASIJOKN" target="_blank"> <img class="registry amazon1"><h1>Amazon</h1><h6>WEDDING REGISTRY</h6></a>
+    <a href="https://www.amazon.com/wedding/jessica-mccay-nereus-brown-arlee-june-2018/registry/PAP93ASIJOKN" target="_blank"> <h1>AMAZON</h1><h6>WEDDING REGISTRY</h6></a>
 
   </div>
+</div>
 </div>
 
 
@@ -76,8 +77,44 @@
 <div class="parent2">
 
   <div class="child2">
-    <div id="details"><span id="the">We found love</span> and we want to celebrate it with you! The wedding ceremony and reception will be at the McCay residence in Arlee, MT.
+    <div id="details"><span id="love">We found love</span> and we want to celebrate it with you! The wedding ceremony and reception will be at the McCay residence in Arlee, MT.
         We love to dance so remember to bring along some comfortable shoes! This is an outdoor ceremony and reception.
+
+        <table align="center"style="width:60%" >
+          <tbody>
+
+              <th style="text-align: center">Wedding </th>
+              <th>Itinerary</th>
+
+            <tr>
+              <td class="time">  5pm     </td>
+              <td class="scheduleInfo">arrive</td>
+            </tr>
+            <tr>
+              <td class="time">6pm</td>
+              <td class="scheduleInfo">ceremony</td>
+            </tr>
+            <tr>
+              <td class="time">630pm</td>
+              <td class="scheduleInfo">drinks & hors d’oeuvres</td>
+            </tr>
+            <tr>
+              <td class="time">730pm</td>
+              <td class="scheduleInfo"> dinner</td>
+            </tr>
+            <tr>
+              <td class="time">  8:30pm </td>
+              <td class="scheduleInfo">the couple cuts the cake!</td>
+            </tr>
+            <tr>
+              <td class="time">   9-? </td>
+              <td class="scheduleInfo">dancing, conversation & laughter</td>
+            </tr>
+          </tbody>
+        </table>
+        <img id="sunflower" src="http://www.ecstudents.net/14springb2f/skim/images/sunflower.png" width="20%" alt="">
+
+
     </div>
   </div>
 </div>
