registry thank you and shipping info, new fonts for links

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     <link rel="stylesheet" href="index.css">
     <script src="index.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Alex+Brush|Oranienbaum" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Tangerine" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Italianno|Pinyon+Script" rel="stylesheet">
 </head>
   <body>
     <nav class="navbar navbar-default">
@@ -70,6 +72,9 @@
 
   </div>
 </div>
+<div >
+  <p id="weddingGifts">We met in Southern California. At the begginning of this year, we packed up and moved across the country to Detroit, Michigan. Life has presented us with opportunity. We are grateful. We are now slowly piecing together what it takes to make this house a home.<br> Please send any wedding gifts to<br> 3162 Chestnut Street,<br> Dearborn, Michigan 48124.<br> <span class="love">Love,<br> Jessica and Nereus</span></p>
+</div>
 </div>
 
 
@@ -77,8 +82,10 @@
 <div class="parent2">
 
   <div class="child2">
-    <div id="details"><span id="love">We found love</span> and we want to celebrate it with you! The wedding ceremony and reception will be at the McCay residence in Arlee, MT.
-        We love to dance so remember to bring along some comfortable shoes! This is an outdoor ceremony and reception.
+    <div id="details"><span class="love">We found <span id="love">Love</span></span> <div class="tabcontent">
+
+  we want to celebrate it with you! The wedding ceremony and reception will be at the McCay residence in Arlee, MT.
+        We love to dance so remember to bring along some comfortable shoes! This is an outdoor ceremony and reception.  </div>
 
         <table align="center"style="width:60%" >
           <tbody>
